good and old form

--- a/expressworks/public/index.html
+++ b/expressworks/public/index.html
@@ -5,6 +5,9 @@
   </head>
   <body>
     <p>I am red!</p>
+    <form action="/form" method="post">
+      <input name="str"/>
+    </form>
   </body>
 </html>
 
